--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,20 +79,12 @@ steps:
                   /Consoleloggerparameters:verbosity=minimal'
 
 - task: VSBuild@1
-  displayName: 'Build Kiosk Client (arm)'
-  inputs:
-    platform: 'arm'
-    solution: '$(kioskClientProjectFile)'
-    configuration: '$(buildConfiguration)'
-    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
-                  /Consoleloggerparameters:verbosity=minimal'
-
-- task: VSBuild@1
+  displayName: 'Build Solution'
   inputs:
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:platform=x64 /p:platform=x86 /p:platform=arm
-                  /p:AppxBundlePlatforms="x86|x64|arm"
+    msbuildArgs: '/p:platform=x64 /p:platform=x86
+                  /p:AppxBundlePlatforms="x86|x64"
                   /p:AppxPackageDir="$(appxPackageDir)"
                   /p:AppxPackageSigningEnabled=true
                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
