--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,18 +78,32 @@ steps:
     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
                   /Consoleloggerparameters:verbosity=minimal'
 
-- task: VSBuild@1
-  displayName: 'Build Solution'
+# - task: VSBuild@1
+#   displayName: 'Build Solution'
+#   inputs:
+#     solution: '$(solution)'
+#     configuration: '$(buildConfiguration)'
+#     msbuildArgs: '/p:platform=x64 /p:platform=x86
+#                   /p:AppxBundlePlatforms="x86|x64"
+#                   /p:AppxPackageDir="$(appxPackageDir)"
+#                   /p:AppxPackageSigningEnabled=true
+#                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
+#                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
+#                   /p:PackageCertificatePassword="$(signingCert.password)"'
+
+- task: MSBuild@1
   inputs:
     solution: '$(solution)'
+    msbuildArchitecture: 'x64'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:platform=x64 /p:platform=x86
-                  /p:AppxBundlePlatforms="x86|x64"
-                  /p:AppxPackageDir="$(appxPackageDir)"
-                  /p:AppxPackageSigningEnabled=true
-                  /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
-                  /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
-                  /p:PackageCertificatePassword="$(signingCert.password)"'
+    clean: true
+    msbuildArguments: '/p:platform=x64 /p:platform=x86
+                      /p:AppxBundlePlatforms="x86|x64"
+                      /p:AppxPackageDir="$(appxPackageDir)"
+                      /p:AppxPackageSigningEnabled=true
+                      /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
+                      /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
+                      /p:PackageCertificatePassword="$(signingCert.password)"'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
