--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -20,6 +20,9 @@
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <LangVersion>9.0</LangVersion>
+    <PackageCertificateThumbprint>C448BA4CDAD6EA016C8547779FBDA74FBD750EBC</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile />
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -244,6 +247,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="City of Stanton Technology Group.pfx" />
     <None Include="City of Stanton.pfx" />
   </ItemGroup>
   <ItemGroup>
