--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,19 +65,31 @@ steps:
       $store.Add($cert)
       $store.Close()
 
-# - task: VSBuild@1
-#   displayName: 'Build Kiosk Client (x86)'
-#   inputs:
-#     platform: 'x86'
-#     solution: '$(kioskClientProjectFile)'
-#     configuration: '$(buildConfiguration)'
-#     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
-#                   /Consoleloggerparameters:verbosity=minimal'
+- task: VSBuild@1
+  displayName: 'Build Kiosk Client (x86)'
+  inputs:
+    platform: 'x86'
+    clean: true
+    solution: '$(kioskClientProjectFile)'
+    configuration: '$(buildConfiguration)'
+    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal'
+
+- task: VSBuild@1
+  displayName: 'Build Kiosk Client (x64)'
+  inputs:
+    platform: 'x64'
+    clean: true
+    solution: '$(kioskClientProjectFile)'
+    configuration: '$(buildConfiguration)'
+    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal'
 
 # - task: VSBuild@1
-#   displayName: 'Build Kiosk Client (x64)'
+#   displayName: 'Build Kiosk Client (ARM)'
 #   inputs:
-#     platform: 'x64'
+#     platform: 'ARM'
+#     clean: true
 #     solution: '$(kioskClientProjectFile)'
 #     configuration: '$(buildConfiguration)'
 #     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
@@ -96,36 +108,36 @@ steps:
 #                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
 #                   /p:PackageCertificatePassword="$(signingCert.password)"'
 
-# - task: MSBuild@1
-#   displayName: 'Package Kiosk Client'
-#   inputs:
-#     solution: '$(deploymentProjectFile)'
-#     msbuildArchitecture: 'x86'
-#     configuration: '$(buildConfiguration)'
-#     clean: true
-#     msbuildArguments: '/p:AppxBundlePlatforms="x86"
-#                       /Fileloggerparameters:verbosity=quiet
-#                       /Consoleloggerparameters:verbosity=minimal
-#                       /p:AppxPackageDir="$(appxPackageDir)"
-#                       /p:AppxPackageSigningEnabled=true
-#                       /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
-#                       /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
-#                       /p:PackageCertificatePassword="$(signingCert.password)"'
-
-- task: VSBuild@1
+- task: MSBuild@1
   displayName: 'Package Kiosk Client'
   inputs:
-    platform: 'x86'
     solution: '$(solution)'
+    msbuildArchitecture: 'x86'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)"
-                  /p:AppxPackageDir="$(appxPackageDir)"
-                  /p:AppxBundle=Always
-                  /p:UapAppxPackageBuildMode=StoreUpload
-                  /p:AppxPackageSigningEnabled=true
-                  /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
-                  /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
-                  /p:PackageCertificatePassword="$(signingCert.password)"'
+    clean: true
+    msbuildArguments: '/p:AppxBundlePlatforms="x86"
+                      /Fileloggerparameters:verbosity=quiet
+                      /Consoleloggerparameters:verbosity=minimal
+                      /p:AppxPackageDir="$(appxPackageDir)"
+                      /p:AppxPackageSigningEnabled=true
+                      /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
+                      /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
+                      /p:PackageCertificatePassword="$(signingCert.password)"'
+
+# - task: VSBuild@1
+#   displayName: 'Package Kiosk Client'
+#   inputs:
+#     platform: 'x86'
+#     solution: '$(solution)'
+#     configuration: '$(buildConfiguration)'
+#     msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)"
+#                   /p:AppxPackageDir="$(appxPackageDir)"
+#                   /p:AppxBundle=Always
+#                   /p:UapAppxPackageBuildMode=StoreUpload
+#                   /p:AppxPackageSigningEnabled=true
+#                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
+#                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
+#                   /p:PackageCertificatePassword="$(signingCert.password)"'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
