--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,34 +67,34 @@ steps:
       $store.Add($cert)
       $store.Close()
 
-- task: VSBuild@1
-  displayName: 'Build Kiosk Client (x86)'
-  inputs:
-    platform: 'x86'
-    clean: true
-    solution: '$(kioskClientProjectFile)'
-    configuration: '$(buildConfiguration)'
-    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
-                  /Consoleloggerparameters:verbosity=minimal'
+# - task: VSBuild@1
+#   displayName: 'Build Kiosk Client (x86)'
+#   inputs:
+#     platform: 'x86'
+#     clean: false
+#     solution: '$(kioskClientProjectFile)'
+#     configuration: '$(buildConfiguration)'
+#     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+#                   /Consoleloggerparameters:verbosity=minimal'
 
-- task: VSBuild@1
-  displayName: 'Build Kiosk Client (x64)'
-  inputs:
-    platform: 'x64'
-    clean: true
-    solution: '$(kioskClientProjectFile)'
-    configuration: '$(buildConfiguration)'
-    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
-                  /Consoleloggerparameters:verbosity=minimal'
+# - task: VSBuild@1
+#   displayName: 'Build Kiosk Client (x64)'
+#   inputs:
+#     platform: 'x64'
+#     clean: false
+#     solution: '$(kioskClientProjectFile)'
+#     configuration: '$(buildConfiguration)'
+#     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+#                   /Consoleloggerparameters:verbosity=minimal'
 
-- task: VSBuild@1
-  displayName: 'Build Kiosk Client Deployment'
-  inputs:
-    clean: false
-    solution: '$(kioskClientDeploymentProjectFile)'
-    configuration: '$(buildConfiguration)'
-    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
-                  /Consoleloggerparameters:verbosity=minimal'
+# - task: VSBuild@1
+#   displayName: 'Build Kiosk Client Deployment'
+#   inputs:
+#     clean: false
+#     solution: '$(kioskClientDeploymentProjectFile)'
+#     configuration: '$(buildConfiguration)'
+#     msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+#                   /Consoleloggerparameters:verbosity=minimal'
 
 # - task: VSBuild@1
 #   displayName: 'Build Kiosk Client (ARM)'
@@ -126,14 +126,17 @@ steps:
     msbuildArchitecture: 'x86'
     configuration: '$(buildConfiguration)'
     clean: false
-    msbuildArguments: '/p:AppxBundlePlatforms="x86"
+    msbuildArguments: '/m
+                      /p:platform=x64 /p:platform=x86
+                      /p:AppxBundlePlatforms="x86"
                       /Fileloggerparameters:verbosity=quiet
                       /Consoleloggerparameters:verbosity=minimal
                       /p:AppxPackageDir="$(appxPackageDir)"
                       /p:AppxPackageSigningEnabled=true
                       /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
                       /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
-                      /p:PackageCertificatePassword="$(signingCert.password)"'
+                      /p:PackageCertificatePassword="$(signingCert.password)"
+                      -nodeReuse:false'
 
 # - task: VSBuild@1
 #   displayName: 'Package Kiosk Client'
